Debug configuration was added

--- a/MM Engine.vcxproj.filters
+++ b/MM Engine.vcxproj.filters
@@ -69,6 +69,7 @@
       <Filter>Файлы ресурсов</Filter>
     </None>
     <None Include="README.md" />
+    <None Include=".github\workflows\build.yml" />
   </ItemGroup>
   <ItemGroup>
     <MASM Include="OpenSource\Race System.asm">
