--- a/OpenSource/MM Engine.rc
+++ b/OpenSource/MM Engine.rc
@@ -30,8 +30,8 @@ MMENGINEBITMAP.BMP      BITMAP                  "MM Engine Bitmap.bmp"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,5,0
- PRODUCTVERSION 2,0,5,0
+ FILEVERSION 2,1,0,0
+ PRODUCTVERSION 2,1,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -48,12 +48,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "The Mod Makers"
             VALUE "FileDescription", "Mod Makers Engine"
-            VALUE "FileVersion", "Version 2.0.5 (OOP Build)"
+            VALUE "FileVersion", "Version 2.1.0 (Release)"
             VALUE "InternalName", "Mod Makers Engine"
             VALUE "LegalCopyright", "Copyright (C) 2021"
             VALUE "OriginalFilename", "MM Engine.exe"
             VALUE "ProductName", "Mod Makers Engine"
-            VALUE "ProductVersion", "Version 2.0.5 (OOP Build)"
+            VALUE "ProductVersion", "Version 2.1.0 (Release)"
         END
     END
     BLOCK "VarFileInfo"
